@@ -1,3 +1,4 @@
+1.1.19-0 @12/09/2006 21:40:00 UTC@
 1.1.18-0 @11/14/2006 22:00:00 UTC@
 1.1.17-0 @10/01/2006 21:50:00 UTC@
 1.1.16-0 @10/01/2006 16:35:00 UTC@
