@@ -50,6 +50,7 @@ namespace gadget
       Proxy()
          : mName("")
          , mStupefied(true)
+         , mNeedUpdate(true)
       {
          ;
       }
@@ -79,6 +80,26 @@ namespace gadget
       virtual void updateData()
       {
          ;
+      }
+
+      /**
+       * @since 1.1.19
+       */
+      void updateDataIfNeeded()
+      {
+         if ( mNeedUpdate )
+         {
+            mNeedUpdate = false;
+            updateData();
+         }
+      }
+
+      /**
+       * @since 1.1.19
+       */
+      void resetData()
+      {
+         mNeedUpdate = true;
       }
 
       /**
@@ -142,6 +163,7 @@ namespace gadget
    protected:
       std::string mName;         /**< The name of the proxy */
       bool        mStupefied;    /**< Is the proxy current stupefied (returns default data) */
+      bool        mNeedUpdate;   /**< @since 1.1.19 */
    };
 
    /** \class TypedProxy Proxy.h gadget/Type/Proxy.h
