@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Dec-09-2006 patrick     Fixed frame delay problems in devices that are relative
+                        to other proxied devices. Patch submitted by Frederic
+                        Drolet.
+                        NEW VERSION: 1.1.19
 Nov-14-2006 patrick     Replaced uses of vpr::ReturnStatus with bool.
                         NEW VERSION: 1.1.18
 Nov-07-2006 patrick     Added analog support to the VRPN driver.
